tests/NormalTests/paczka1/small_fuzzy/47119667.err
Error in line 4: ey6xSLk8c S356 95,4
Error in line 7: ey6xSLk8c A271 85,6
Error in line 14: NU0ayGU8VH S356 12,9
